# gib-earsiv-mcp-server

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.sisyphus/plans/: gib-earsiv-mcp-plan.md
src/gib_earsiv_mcp/: server.py  tools.py
src/gib_earsiv_mcp/core/: client.py  config.py  exceptions.py  mock_client.py  session.py
src/gib_earsiv_mcp/models/: input.py
tests/: conftest.py  test_imza_bekleyen.py  test_phase2.py  test_phase3.py  test_phase4.py
