[project]
name = "arsiv-fatura"
version = "0.1.0"
description = "GIB e-Arsiv MCP Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.1.0",
    "weasyprint>=69.0",
]

[project.scripts]
gib-mcp = "gib_earsiv_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gib_earsiv_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
